--- a/Fambruh/src/main/resources/application.properties
+++ b/Fambruh/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.mail.username=fambruh@army
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+# Maximum size allowed for file uploads
+spring.servlet.multipart.max-file-size=40MB
+# Maximum size allowed for multipart/form-data requests
+spring.servlet.multipart.max-request-size=40MB
