changed back MuSQL databse username and password

--- a/Fambruh/src/main/resources/application.properties
+++ b/Fambruh/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9400
 spring.datasource.url=jdbc:mysql://localhost:3306/fambruh?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=Tomasm21
-spring.datasource.password=Tomasm21-xi
-# spring.datasource.username=root
-# spring.datasource.password=9987626498root
+# spring.datasource.username=Tomasm21
+# spring.datasource.password=Tomasm21-xi
+spring.datasource.username=root
+spring.datasource.password=9987626498root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mail.username=fambruh@army
